--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Instagram</title>
 </head>
 <body>
+    <div class="instagram-wrapper">
+        <div class="smartphone">
+            <img src="./img/smartphone.png">
+        </div>
+        <div class="instagram-continue">
+            <div class="group">
+                <img src="./img/instagram-logo.png" class="instagram-logo">
+                <div class="foto-perfil">
+                    <img src="./img/perfil-instagram.jfif">
+                </div>
+                <a href="#" class="login-instagram">Continue como henrique_fagner_</a>
+                <a href="#" class="logout-instagram">Remover conta</a>
+            </div>
+            <div class="group">
+                <p class="not-account">Não é henrique_fagner_</p>
+                <p class="not-account">
+                    <span class="link-blue"> Alternar Conta</span>
+                    ou 
+                    <span class="link-blue">Inscreva-se</span>
+                </p>
+            </div>
+            <div class="get-app">
+                <p class="get-app">Baixe o aplicativo</p>
+                <div class="download">
+                    <a href="#" class="app-download"></a>
+                    <a href="#" class="app-download"></a>
+                </div>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
